# LibraryStroll

./: index.html
LibraryStrollRFW/tmp/: pyproject.toml
LibraryStrollRFW/tmp/LibraryDRF/: db.sqlite3  manage.py
LibraryStrollRFW/tmp/LibraryDRF/LibraryApp/: admin.py  models.py  serializers.py  views.py
LibraryStrollRFW/tmp/LibraryDRF/LibraryApp/migrations/: 0001_initial.py  0002_genres_book_genres.py  0003_book_picture.py
LibraryStrollRFW/tmp/LibraryDRF/LibraryDRF/: asgi.py  settings.py  urls.py  wsgi.py
css/: main.css
js/: swiper.js
